src/tests/cFiles/benchmark/kleeversions/kleetest/klee_06_binarysearch_no_helper_mainn_normal_max_depth=5/test000001.ptr.err
Error: memory error: out of bound pointer
File: /app/code/tests/cFiles/benchmark/kleeversions/06_binarysearch_no_helper.c
Line: 42
assembly.ll line: 9763
State: 4
Stack: 
	#000009763 in mainn (=94576841533168, ) at /app/code/tests/cFiles/benchmark/kleeversions/06_binarysearch_no_helper.c:42
	#100009807 in __klee_posix_wrapped_main () at /app/code/tests/cFiles/benchmark/kleeversions/kleetest/06_binarysearch_no_helper_mainn_.c:13
	#200007331 in __user_main (=1, =94576814068320, =94576814068336) at /app/klee/runtime/POSIX/klee_init_env.c:244
	#300000582 in __uClibc_main (=94576815216520, =1, =94576814068320, =0, =0, =0, =0) at libc/misc/internals/__uClibc_main.c:401
	#400000749 in main (=1, =94576814068320)
Info: 
	address: (Add w64 94576841533168
          (Mul w64 4
                   (SExt w64 (SDiv w32 (Add w32 4294967295
                                                (ReadLSB w32 0 1bc0bf6ede2a4b5e83ca0f6289787e2b))
                                       2))))
	example: 94576841535212
	range: [94576841533208, 94576841535212]
	next: object at 94576814068320 of size 216
		MO0[216] allocated at main():  call void @__uClibc_main(i32 (i32, i8**, i8**)* @__user_main, i32 %0, i8** %1, void ()* null, void ()* null, void ()* null, i8* null)
