src/tests/cFiles/benchmark/kleeversions/kleetest/klee_06_binarysearch_no_helper_mainn_normal_max_depth=5/test000001.kquery
array 1bc0bf6ede2a4b5e83ca0f6289787e2b[4] : w32 -> w8 = symbolic
array model_version[4] : w32 -> w8 = symbolic
(query [(Eq 1
             (ReadLSB w32 0 model_version))
         (Eq false
             (Slt N0:(ReadLSB w32 0 1bc0bf6ede2a4b5e83ca0f6289787e2b)
                  4294967295))
         (Eq false (Slt 1024 N0))
         (Sle 0 N1:(Add w32 4294967295 N0))
         (Eq false
             (Ult (Mul w64 4
                           (SExt w64 (SDiv w32 N1 2)))
                  37))]
        false)
